Added user check

--- a/imports/ui/panel.html
+++ b/imports/ui/panel.html
@@ -32,6 +32,7 @@
                     <tr>
                         <th>Vin</th>
                         <th>Miles</th>
+                        <th>Author</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -39,6 +40,7 @@
                     <tr>
                         <td>{{vin}}</td>
                         <td>{{miles}}</td>
+                        <td>{{author}}</td>
                     </tr>
                     {{/each}}
                 </tbody>
