Added some alerts

--- a/imports/ui/panel.html
+++ b/imports/ui/panel.html
@@ -61,6 +61,13 @@
             </form>
             {{/if}}
         </div>
+        <div class="alert alert-success alert-dismissable fade in" style="display:none;">
+  <strong>Success!</strong> Added your information
+</div>
+        <div class="alert alert-danger alert-dismissable fade in" style="display:none;">
+  <strong>Oops!</strong> Please check your inputs
+</div>
+
         <div class="panel-footer">
             @&copy;
         </div>
